# ruslin-electron

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  electron-builder.json5  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
electron/: main.ts  preload.ts
ruslin-addon/: main.d.ts  package.json
src/: App.tsx  main.tsx  style.scss
src-native/: lib.rs
src/components/: Counter.tsx  _mixins.scss  animation.css  index.tsx  theme.css
src/components/Button/: Button.scss  Button.tsx
src/components/ContentDialog/: ContentDialog.scss  ContentDialog.tsx
src/components/IconButton/: IconButton.scss  IconButton.tsx
src/components/ListItem/: ListItem.scss  ListItem.tsx
src/components/ProgressRing/: ProgressRing.scss  ProgressRing.tsx
src/components/TextBlock/: TextBlock.scss  TextBlock.tsx
src/components/TextBox/: TextBox.scss  TextBox.tsx
src/lib/: AppData.ts  addon.ts  window.ts
src/pages/main/: CodeMirror.scss  CodeMirror.tsx  Editor.scss  Editor.tsx  Folders.scss  Folders.tsx  Notes.scss  Notes.tsx  index.scss  index.tsx
