[package]
name = "ruslin-addon"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src-native/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.5", features = ["serde-json", "napi6", "async"] }
napi-derive = "2.12.5"
ruslin-data = { path = "./ruslin-data" }
libsqlite3-sys = { version = "0.25", features = ["bundled"] }
dirs = "5.0.1"
tokio = { version = "1.24", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"

[patch.crates-io]
diesel = { git = 'https://github.com/DianQK/diesel.git', tag = "v2.0.3-p1" }
